# modelo_limitacoes_diabetes

./: README.md  app.py  app_com_shap.py  preprocessador_treinado.lib  pyproject.toml  requirements.txt
.streamlit/: config.toml
