[project]
name = "modelo-final"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "catboost==1.2.8",
    "dcurves==1.1.7",
    "imbalanced-learn==0.14.1",
    "lightgbm==4.6.0",
    "matplotlib==3.10.0",
    "numpy==2.0.2",
    "optuna==4.6.0",
    "pandas==2.3.3",
    "scikit-learn==1.6.1",
    "scikit-optimize==0.10.2",
    "scikits-bootstrap==1.1.1",
    "seaborn==0.13.2",
    "shap>=0.51.0",
    "streamlit>=1.55.0",
    "tabpfn==6.4.1",
    "tabulate==0.9.0",
    "xgboost==3.1.3",
]
